--- a/backend/package.json
+++ b/backend/package.json
@@ -11,22 +11,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "^8.1.5",
     "braintree": "^3.12.0",
     "cookie-parser": "^1.4.7",
-    "cors": "^2.8.6",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.2.0",
     "express": "^4.19.1",
-    "express-jwt": "^8.6.0",
-    "express-validator": "^7.5.0",
+    "express-jwt": "^8.4.1",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.2.0",
     "formidable": "^2.1.2",
-    "jsonwebtoken": "^9.1.0",
-    "lodash": "^4.18.0",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "mailgun-js": "^0.6.7",
     "moment": "^2.30.0",
     "mongoose": "^7.2.0",
-    "morgan": "^1.11.0",
-    "multer": "^1.4.5",
-    "nodemon": "^3.2.0",
-    "uuid": "^9.1.0"
+    "morgan": "^1.10.0",
+    "multer": "^2.0.0-rc.3",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.16",
+    "nodemon": "^3.1.6",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
+    "uuid": "^11.0.2"
   }
 }
