--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.7.7",
+    "axois": "^0.0.1-security",
     "braintree-web": "^3.95.0",
-    "braintree-web-drop-in-react": "^1.8.1",
-    "compression": "^1.7.6",
+    "braintree-web-drop-in-react": "^1.2.1",
+    "compression": "^1.7.4",
     "dotenv": "^16.2.0",
     "express": "^4.19.1",
     "moment": "^2.30.0",
-    "pm2": "^5.8.0",
-    "query-string": "^7.1.1",
+    "pm2": "^5.4.3",
+    "query-string": "^7.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-rating": "^2.0.5",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.17.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
